# snapture-sql-agent

./: .dockerignore  .env copy  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER_MCP.md  Dockerfile  Dockerfile.mcp  LICENSE  MCP_SETUP.md  Makefile  README.md  build-mcp-docker.sh  demo_test_streaming.md  fastmcp_testing_guide.md  mcp_server.py  pyproject.toml  run_mcp_server.sh  server.py  test_streaming.md
.github/workflows/: cd.yaml  ci.yaml  publish-mcp-docker.yml
prompts/: system-senar.jinja2  system.jinja2
queries/ddl/: create_checkpoint_index.sql  create_schema.sql
scripts/: generate_changelog.sh  initialize_db.py
src/app/api/: __init__.py  dependencies.py  lifespan.py
src/app/api/routers/: __init__.py  chat.py  data.py  health.py
src/app/config/: __init__.py  database.py  paths.py  settings.py
src/app/db/: __init__.py  pool.py  query_store.py
src/app/graphs/: __init__.py
src/app/graphs/base/: __init__.py  builder.py  node.py
src/app/graphs/chat/: __init__.py  edges.py  graph.py  state.py
src/app/graphs/chat/nodes/: __init__.py  llm.py  tool.py
src/app/mcp/: __init__.py  config.py  server.py  tools.py
src/app/models/api/requests/: __init__.py  chat.py
src/app/models/graph/: interrupts.py
src/app/tools/: __init__.py  base.py  db.py  handler.py
src/app/utils/: __init__.py  prompts_utils.py
